# MoneyTracker

./: .dockerignore  .env.dist  .gitignore  .isort.cfg  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
core/MoneyTracker/: asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
core/MoneyTracker/settings/: main.py
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: enums.py  exceptions.py  models.py
core/apps/customers/: admin.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py  containers.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exceptions/: products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/apps/products/services/: products.py  reviews.py
core/apps/products/use_cases/reviews/: create.py
docker-compose/: monitoring.yml
docker_compose/: storages.yml
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
